--- a/choices/died.html
+++ b/choices/died.html
@@ -1,7 +1,7 @@
 # Died...For the First time
  Oops, you died in the process of saving the girl, you got stabbed right in the stomach
 
-[Your life flashes before you, praying to get reborn again](reincarnated.md)
+ <a href = "reincarnated.md"> Your life flashes before you, praying to get reborn again </a>
 
 [You try to take the knife out stabbed in your heart, but that only made your bleeding more faster](risk.md)
 
