made all files into html

--- a/choices/died.html
+++ b/choices/died.html
@@ -1,7 +1,9 @@
-# Died...For the First time
+<h1> Died...For the First time </h1>
  Oops, you died in the process of saving the girl, you got stabbed right in the stomach
 
- <a href = "reincarnated.html"> Your life flashes before you, praying to get reborn again </a>
+ <a href = "reincarnated.html"> <p>Your life flashes before you, praying to get reborn again </p> </a>
 
-[You try to take the knife out stabbed in your heart, but that only made your bleeding more faster](risk.md)
 
+
+<a href= "risk.html">You try to take the knife out stabbed in your heart, but that only made your bleeding more faster </a>
+ 
