--- a/choices/died2.html
+++ b/choices/died2.html
@@ -1,7 +1,7 @@
-# Died For the second time..
+<h1>Died For the second time..</h1>
 
 You run until you get home, until you get hit by trunk-kun..
 
-[You slowly lose conscious of yourself, as the bleeding worsen..](noble.md)
+<a href= "noble.html"><p>You slowly lose conscious of yourself, as the bleeding worsen..</p></a>
 
-[You died..But magicaly you got reincarnated?...Don't choose this trust me!](unknown.md)
+<a href= "unknown.html">You died..But magicaly you got reincarnated?...Don't choose this trust me!</a>
