--- a/choices/light.html
+++ b/choices/light.html
@@ -1,7 +1,7 @@
-# Light?
+<h1> Light? </h1>
 
 You manage to sneak behind them! Now you see a shine of light in front of you! It looks like freedom?...
 
-[Go towards the light](reincarnated.md)
+<a href= "reincarnated.html"><p>Go towards the light</p></a>
 
-[Go backward and don't trust the light](unlucky.md)
+<a href= "unlucky.html">Go backward and don't trust the light</a>
