--- a/choices/noble.html
+++ b/choices/noble.html
@@ -1,7 +1,7 @@
-# A poor noble..
+<h1> A poor noble.. </h1>
 
 Looks like you got reincarnated into a family of nobles! BUT a poor noble.. You derserve it for choosing this choice..
 
-[Get out of the house you are in? And take a stroll around the nearby streets?](ring.md)
+<a href= "ring.html"><p>Get out of the house you are in? And take a stroll around the nearby streets?</p></a>
 
-[Continuing staying in the house and not trying to earn any cash to help your noble status?](sighs.md)
+<a href= "sighs.html">Continuing staying in the house and not trying to earn any cash to help your noble status?</a>
