--- a/choices/ring.html
+++ b/choices/ring.html
@@ -1,7 +1,7 @@
-# A ring?
+<h1> A ring? </h1>
 
 You happen to come across a ring on the floor while you were strolling on the street!
 
-[Pick the ring up and return it to its owner?](fortune.md)
+<a href= "fortune.html"><p>Pick the ring up and return it to its owner?</p></a>
 
-[Leave the ring alone?](no-profit.md)
+<a href= "no-profit.html">Leave the ring alone?</a>
