--- a/choices/risk.html
+++ b/choices/risk.html
@@ -1,7 +1,7 @@
-# Risk
+<h1> Risk </h1>
 
 You open your eyes, only to find yourself in front of you presented with two choices
 
-[Choose to be reincarnated?](greetings.md)
+<a href= "greetings.html"><p>Choose to be reincarnated?</p></a>
 
-[Return to your world...But witness the situation again..?](../start.md)
+<a href= "../start.html">Return to your world...But witness the situation again..?</a>
