--- a/choices/sighs.html
+++ b/choices/sighs.html
@@ -1,7 +1,7 @@
-# Sighs
+<h1> Sighs </h1>
 
 Why would you ever to continue to stay in your house, and not help your family? The goddess is furious by what you chose
 
-[Be eaten by wolfs?](wolfs.md)
+<a href= "wolfs.html"><p>Be eaten by wolfs?</p></a>
 
-[Be teleported into a unknown dungeon?](unknown.md)
+<a href= "unknown.html">Be teleported into a unknown dungeon?</a>
