--- a/choices/torch.html
+++ b/choices/torch.html
@@ -1,7 +1,7 @@
-# Torch
+<h1> Torch </h1>
 
 You wander ahead, and luckily you found an torch in front of you, only then you realize its a dungeon, filled with monsters. And there is a bunch of goblins ahead. What will you do?
 
-[Try to sneak behind them and try your luck?](light.md)
+<a href= "light.html"><p>Try to sneak behind them and try your luck?</p></a>
 
-[Try to attack them with your bare fist?](goblin.md)
+<a href= "goblin.html">Try to attack them with your bare fist?</a>
