--- a/choices/unknown.html
+++ b/choices/unknown.html
@@ -1,7 +1,7 @@
-# The unknowns
+<h1> The unknowns </h1>
 
 You open your eyes, only finding yourself alone, in a pinch darkness surronding
 
-[Wander around?](torch.md)
+<a href= "torch.html"><p>Wander around?</p></a>
 
-[Try to scream to hopefully caught someone's attention](despair.md)
+<a href= "despair.html">Try to scream to hopefully caught someone's attention</a>
