--- a/choices/unlucky.html
+++ b/choices/unlucky.html
@@ -1,5 +1,5 @@
-# Unlucky
+<h1> Unlucky </h1>
 
 Well, you didn't trust your gut and that light WAS freedom but you didn't go toward it. Seems like you died once again.
 
-[Restart your adventure?](../start.md)
+<a href= "../start.html"><p>Restart your adventure?</p></a>
