--- a/choices/unwise.html
+++ b/choices/unwise.html
@@ -1,6 +1,6 @@
-# Unwise Choice
+<h1> Unwise Choice </h1>
  You made an poor choice! You aimlessly wander in the forest for 2 hours and made no progress..
 
- [Continue wandering?](wolfs.md)
+ <a href= "wolfs.html"><p>Continue wandering?</p></a>
 
- [Safetly comes first, get out of the forest and return to the town instead?](reincarnated.md)
+ <a href= "reincarnated.html">Safetly comes first, get out of the forest and return to the town instead?</a>
