--- a/choices/wise.html
+++ b/choices/wise.html
@@ -1,7 +1,7 @@
-# Wise Choice
+<h1>Wise Choice </h1>
 
 You made an wise choice! You decide to explore the town and learn more about this world.
 
-[Go to an blacksmith and get your sword and armor forged and venture off to level up](reincarnated.md)
+<a href= "reincarnated.html"><p>Go to an blacksmith and get your sword and armor forged and venture off to level up</p></a>
 
-[Recruit 4 people as your teammate and storm off into the dungeons](unknown.md)
+<a href= "unknown.html">Recruit 4 people as your teammate and storm off into the dungeons</a>
