--- a/choices/wolfs.html
+++ b/choices/wolfs.html
@@ -1,5 +1,5 @@
-# Wolfs? Monsters?
+<h1> Wolfs? Monsters? </h1>
 
 You wander and wander, only to then finally find a living being! A wolf?... You try to befriend it, however it looks like its a S-rank Wolf. It attacks you! And you died...They torned you apart
 
-[You died..Restart over?](../start.md)
+<a href= "../start.html"><p>You died..Restart over?</p></a>
