--- a/choices/despair.html
+++ b/choices/despair.html
@@ -1,5 +1,5 @@
-# Helpless
+<h1> Helpless </h1>
 
 You scream for help, but you only hear your echoes, until then you hear a foot step closing in on you. Uh-oh it wasn't a human, you attracted a bunch of monsters. Looks like this will be the end for you.
 
-[Restart?](../start.md)
+<a href = "../start.html"><p>Restart?</p></a>
