--- a/choices/fortune.html
+++ b/choices/fortune.html
@@ -1,5 +1,5 @@
-# Real Fortune?
+<h1> Real Fortune? </h1>
 
 It looks like you decide to pick up the ring? However you don't plan to sell it off. You instead return the ring to its original owner. The owner was amazed and allowed you to become their servant, both allowing you and your family to have a stable income.
 
-[The end...Was it really truly an ending?](../start.md)
+<a href= "../start.html"><p>The end...Was it really truly an ending?</p></a>
