--- a/choices/greetings.html
+++ b/choices/greetings.html
@@ -1,6 +1,6 @@
-# Greetings Mortal
+<h1> Greetings Mortal </h1>
 You chosed Reincarnation! The goddess that rule over reincarnation decides to greet you and bestow her blessings to you for your heroic act!
 
-[Accept her blessing?](reincarnated.md)
+<a href= "reincarnated.html"><p>Accept her blessing?</p></a>
 
-[Decline her blessing?....](noble.md)
+<a href= "noble.html">Decline her blessing?....</a>
