--- a/choices/no-profit.html
+++ b/choices/no-profit.html
@@ -1,7 +1,7 @@
-# Hunger
+<h1> Hunger </h1>
 
 You decide to leave the ring alone, and you continue to wander aimlessly on the street like a ghost. Until you end up collasping of hunger and dying of it.
 
-[You died in a poor way, the goddess once again present you choices](risk.md)
+<a href= "risk.html"><p>You died in a poor way, the goddess once again present you choices</p></a>
 
 
