--- a/choices/reincarnated.html
+++ b/choices/reincarnated.html
@@ -1,8 +1,8 @@
-# Decision Making
+<h1> Decision Making </h1>
 
 You actually got reincarnated! There is a town behind you and a forest in front of you! What will you do?
 
-[Explore the town of the beginning](wise.md)
+<a href= "wise.html"><p>Explore the town of the beginning</p></a>
 
-[Wander off into the unknown in the forest](unwise.md)
+<a href= "unwise.html">Wander off into the unknown in the forest</a>
 
