--- a/start.html
+++ b/start.html
@@ -1,6 +1,6 @@
- # Start
+ <h1> Start </h1>
  You decide to go out to shop for supplies however you encounter a gang of people trying to kidnap the girl! What will you do?
 
-[Help the girl escape from the gang](choices/died.md)
+<a href= "../died.html"></a>Help the girl escape from the gang</a>
 
 [You decide to run away like a coward](choices/died2.md)
