made all link accessible for http server

--- a/start.html
+++ b/start.html
@@ -1,6 +1,6 @@
  <h1> Start </h1>
  You decide to go out to shop for supplies however you encounter a gang of people trying to kidnap the girl! What will you do?
 
-<a href= "../died.html"></a>Help the girl escape from the gang</a>
+<a href= "choices/died.html"><p>Help the girl escape from the gang</p></a>
 
-[You decide to run away like a coward](choices/died2.md)
+<a href= "choices/died2.html">You decide to run away like a coward</a>
