--- a/choices/goblin.html
+++ b/choices/goblin.html
@@ -2,4 +2,4 @@
 
 You punch them hard in the back with your barefist, however they didn't even finch at your attack. You can sense their murderous intent, and they end up overpowering as you. You died...
 
-<a href= "../start.html"><p>Restart and try again?</p></a>
+<a href= "start.html"><p>Restart and try again?</p></a>
